content plus csv logic

--- a/templates/index.html
+++ b/templates/index.html
@@ -2396,21 +2396,21 @@ async function addCustomer() {
               </button>
 
               <div class="container-glass">
-                <div data-text="Github" style="--r:-15;" class="glass">
+                <div data-text="Design" style="--r:-15;" class="glass">
                   <svg viewBox="0 0 496 512" height="1em" xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
                     ></path>
                   </svg>
                 </div>
-                <div data-text="Code" style="--r:5;" class="glass">
+                <div data-text="Deliver" style="--r:5;" class="glass">
                   <svg viewBox="0 0 640 512" height="1em" xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M392.8 1.2c-17-4.9-34.7 5-39.6 22l-128 448c-4.9 17 5 34.7 22 39.6s34.7-5 39.6-22l128-448c4.9-17-5-34.7-22-39.6zm80.6 120.1c-12.5 12.5-12.5 32.8 0 45.3L562.7 256l-89.4 89.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l112-112c12.5-12.5 12.5-32.8 0-45.3l-112-112c-12.5-12.5-32.8-12.5-45.3 0zm-306.7 0c-12.5-12.5-32.8-12.5-45.3 0l-112 112c-12.5 12.5-12.5 32.8 0 45.3l112 112c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256l89.4-89.4c12.5-12.5 12.5-32.8 0-45.3z"
                     ></path>
                   </svg>
                 </div>
-                <div data-text="Earn" style="--r:25;" class="glass">
+                <div data-text="Sell" style="--r:25;" class="glass">
                   <svg viewBox="0 0 576 512" height="1em" xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M64 64C28.7 64 0 92.7 0 128V384c0 35.3 28.7 64 64 64H512c35.3 0 64-28.7 64-64V128c0-35.3-28.7-64-64-64H64zm64 320H64V320c35.3 0 64 28.7 64 64zM64 192V128h64c0 35.3-28.7 64-64 64zM448 384c0-35.3 28.7-64 64-64v64H448zm64-192c-35.3 0-64-28.7-64-64h64v64zM288 160a96 96 0 1 1 0 192 96 96 0 1 1 0-192z"
@@ -2492,7 +2492,7 @@ async function addCustomer() {
             <div class="parent">
                 <div class="cardc">
                     <div class="content-box">
-                        <span class="card-title">Ai-Powered Personalization</span>
+                        <span class="card-title">Email Personalization</span>
                         <p class="card-content">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                         </p>
@@ -2506,9 +2506,9 @@ async function addCustomer() {
               <div class="parent">
                 <div class="cardc">
                     <div class="content-box">
-                        <span class="card-title">High Open Rates</span>
+                        <span class="card-title">Higher Engagement</span>
                         <p class="card-content">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                            Boost open rates with tailor made content ffor every single email. 
                         </p>
                         <span class="see-more">Learn More</span>
                     </div>
@@ -2522,7 +2522,7 @@ async function addCustomer() {
                     <div class="content-box">
                         <span class="card-title">Scalable</span>
                         <p class="card-content">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                            Manage large outreach campaigns seamlessly
                         </p>
                         <span class="see-more">Learn More</span>
                     </div>
@@ -2656,20 +2656,20 @@ async function addCustomer() {
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                         </svg>
-                        <span>Unlimited file storage</span>
+                        <span>20 Free Emails P/M</span>
                       </div>
                       <div class="list">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                         </svg>
-                        <span>10 GB bandwidth per month</span>
+                        <span>Email Personalisation</span>
                       </div>
                       <div class="list">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                         </svg>
           
-                        <span>10.000 tasks per month</span>
+                        <span>Automatic Email Sending</span>
                       </div>
                       <div class="list">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -2683,7 +2683,7 @@ async function addCustomer() {
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                         </svg>
           
-                        <span>100 Webhooks</span>
+                        <span>Csv uploads supported</span>
                       </div>
                       
                   </div>
@@ -2715,20 +2715,20 @@ async function addCustomer() {
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                         </svg>
-                        <span>Unlimited file storage</span>
+                        <span>10.000 Emails P/M</span>
                       </div>
                       <div class="list">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                         </svg>
-                        <span>10 GB bandwidth per month</span>
+                        <span>Email Personalisation</span>
                       </div>
                       <div class="list">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                         </svg>
           
-                        <span>10.000 tasks per month</span>
+                        <span>Live Support</span>
                       </div>
                       <div class="list">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -2742,7 +2742,7 @@ async function addCustomer() {
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                         </svg>
           
-                        <span>100 Webhooks</span>
+                        <span>Email Tracking</span>
                       </div>
                       
                   </div>
@@ -2768,34 +2768,34 @@ async function addCustomer() {
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                         </svg>
-                        <span>Unlimited file storage</span>
+                        <span>Unlimited Monthly Emails</span>
                       </div>
                       <div class="list">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                         </svg>
-                        <span>10 GB bandwidth per month</span>
-                      </div>
-                      <div class="list">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
-                        </svg>
-          
-                        <span>10.000 tasks per month</span>
+                        <span>Latest AI Model</span>
                       </div>
                       <div class="list">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                         </svg>
           
-                        <span>Email support</span>
+                        <span>Advanced Email Tracking</span>
                       </div>
                       <div class="list">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                         </svg>
           
-                        <span>100 Webhooks</span>
+                        <span>24/7 Support</span>
+                      </div>
+                      <div class="list">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                        </svg>
+          
+                        <span>Personalised Prompts</span>
                       </div>
                       
                   </div>
@@ -2816,8 +2816,8 @@ async function addCustomer() {
         <div class="info">
             <h3>Why Personalize Your Emails</h3>
             <div class="info-container">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam minus facilis reiciendis animi ut nisi deserunt esse repudiandae quia eum nemo, assumenda quis aliquid non. Ipsa nobis ipsam voluptatem rerum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores inventore aspernatur unde cumque aliquid. Tempora iure, repellendus aliquid nam eius culpa aspernatur magni ipsum molestias voluptas perspiciatis odit, veniam eos distinctio ut? In perspiciatis ullam doloremque asperiores. Numquam nihil, sapiente dolorem ea eaque incidunt voluptatem doloribus recusandae corporis porro ipsam quibusdam minima optio. Voluptas ipsum sequi, incidunt saepe voluptatibus beatae error blanditiis quibusdam animi. A doloribus, qui aliquid perferendis facilis aspernatur ullam dolor laboriosam numquam dolore, nemo iusto eius laudantium voluptatibus possimus porro molestiae tempore voluptatem accusamus sint. Quidem rerum at odit enim vel tenetur sed delectus numquam sequi dignissimos?</p>
+                <p>Generic, rushed Emails often end up ignored, costing you potential clients and opportunities.</p>
+                <p>VoltMailer allows you to send fully personalized, content rich emails that capture attention. Our AI is trained dynamically on emails with the highest open rates and conversion rates, meaning you can access Professional, Industry standard email structures. <br><br>Transform your email strategy with our personalized approach and see a significant boost in your outreach ROI. </p>
                 <button class="info-container-btn">Start Free Today</button>
             </div>
         </div>
@@ -2881,8 +2881,8 @@ async function addCustomer() {
             <div class="row">
             <h1 class="title">Frequently Asked Questions</h1>
             <div class="faq-item">
-                <h2 class="faq-question">What is the refund policy?</h2>
-                <p class="faq-answer">We offer a 30-day money-back guarantee. If you're not satisfied with your purchase, you can request a refund within 30 days of your purchase date.</p>
+                <h2 class="faq-question">How does the AI personalize emails ?</h2>
+                <p class="faq-answer">Our AI scrapes relevant data from the websites you provide to craft the perfect tailored email pitch to your every potential client.</p>
             </div>
             <div class="faq-item">
                 <h2 class="faq-question">How do I upgrade my plan?</h2>
@@ -2890,7 +2890,7 @@ async function addCustomer() {
             </div>
             <div class="faq-item">
                 <h2 class="faq-question">Is there a free trial available?</h2>
-                <p class="faq-answer">Yes, we offer a 14-day free trial for all our plans. You can sign up for the trial without providing payment information.</p>
+                <p class="faq-answer">Yes, we offer a free plan with 20 Monthly emails. On us. You can sign up for the trial without providing payment information.</p>
             </div>
             <!-- Add more FAQ items as needed -->
         </div>
