--- a/templates/index.html
+++ b/templates/index.html
@@ -2642,7 +2642,7 @@ async function addCustomer() {
                 <div class="pack_card ">
                     <div class="box">
                     <div class="pack_name">Starter</div>
-                    <p class="description">Avanced feaures for Individuals and organizations</p>
+                    <p class="description">Try out our service with 20 Free emails on us.</p>
                     <div class="price_container">
                         <span class="devise">$</span>
                         <span class="price">0</span>
@@ -2754,7 +2754,7 @@ async function addCustomer() {
                     <div class="box">
                     <div class="pack_name">Enterprise</div>
           
-                    <p class="description">Avanced feaures for Individuals and organizations</p>
+                    <p class="description">Get access to our most advanced models for your Buisness.</p>
                     <div class="price_container">
                         <!-- <span class="devise">$</span> -->
                         <span class="price">Contact us</span>
