--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -1002,8 +1002,8 @@ document.addEventListener('DOMContentLoaded', () => {
       <div class="pack_card ">
           <div class="box">
           <div class="pack_name">Starter</div>
-          <p class="description">Avanced feaures for Individuals and organizations</p>
-          <div class="price_container">
+          <p class="description">Try out our service with 20 Free emails on us.</p>
+                    <div class="price_container">
               <span class="devise">$</span>
               <span class="price">0</span>
               <span class="date">/month</span>
@@ -1065,7 +1065,7 @@ document.addEventListener('DOMContentLoaded', () => {
           <p class="description">Avanced feaures for Individuals and organizations</p>
           <div class="price_container">
               <span class="devise">$</span>
-              <span class="price">19</span>
+              <span class="price">49</span>
               <span class="date">/month</span>
             </div>
             <div class="lists">
@@ -1115,7 +1115,7 @@ document.addEventListener('DOMContentLoaded', () => {
           <div class="box">
           <div class="pack_name">Enterprise</div>
 
-          <p class="description">Avanced feaures for Individuals and organizations</p>
+          <p class="description">Get access to our most advanced models for your Buisness.</p>
           <div class="price_container">
               <!-- <span class="devise">$</span> -->
               <span class="price">Contact us</span>
