--- a/templates/index.html
+++ b/templates/index.html
@@ -16,437 +16,20 @@
 <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.4.0/uicons-solid-rounded/css/uicons-solid-rounded.css'>
 </head>
 <style>
-
-
-    /* @keyframes animate {
-    0%{
-        transform: translateY(0) rotate(0deg);
-        opacity: 1;
-        border-radius: 0;
-    }
-    100%{
-        transform: translateY(-1000px) rotate(720deg);
-        opacity: 0;
-        border-radius: 50%;
-    } */
-/* } */
-/* 
-.background {
-    z-index: -2;
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    margin: 0;
-    padding: 0;
-    background: linear-gradient(to right, #240b36, #c31432);
-    overflow: hidden;
-        border-radius: 16px;
-        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-        backdrop-filter: blur(50px);
-        -webkit-backdrop-filter: blur(200px);
+@media (min-width: 600px) {
+  .c{
+  flex-direction: row;
+  /* border: #00DDEB 1px solid; */
 }
-.background li {
-    position: absolute;
-    display: block;
-    list-style: none;
-    width: 20px;
-    height: 20px;
-    background: #240b3650;
-    animation: animate 17s linear infinite;
+.faq .row{
+  width: 50%;
+}
+.row-cube{
+    display: flex;
 }
 
-
-.background li:nth-child(0) {
-    left: 77%;
-    width: 252px;
-    height: 252px;
-    bottom: -252px;
-    animation-delay: 0s;
-}
-.background li:nth-child(1) {
-    left: 32%;
-    width: 223px;
-    height: 223px;
-    bottom: -223px;
-    animation-delay: 1s;
-}
-.background li:nth-child(2) {
-    left: 24%;
-    width: 166px;
-    height: 166px;
-    bottom: -166px;
-    animation-delay: 2s;
-}
-.background li:nth-child(3) {
-    left: 68%;
-    width: 122px;
-    height: 122px;
-    bottom: -122px;
-    animation-delay: 2s;
-}
-.background li:nth-child(4) {
-    left: 83%;
-    width: 147px;
-    height: 147px;
-    bottom: -147px;
-    animation-delay: 13s;
-}
-.background li:nth-child(5) {
-    left: 28%;
-    width: 227px;
-    height: 227px;
-    bottom: -227px;
-    animation-delay: 15s;
-}
-.background li:nth-child(6) {
-    left: 24%;
-    width: 109px;
-    height: 109px;
-    bottom: -109px;
-    animation-delay: 29s;
-}
-.background li:nth-child(7) {
-    left: 84%;
-    width: 184px;
-    height: 184px;
-    bottom: -184px;
-    animation-delay: 20s;
-}
-.background li:nth-child(8) {
-    left: 85%;
-    width: 183px;
-    height: 183px;
-    bottom: -183px;
-    animation-delay: 3s;
-}
-.background li:nth-child(9) {
-    left: 0%;
-    width: 274px;
-    height: 274px;
-    bottom: -274px;
-    animation-delay: 21s;
-}
-.background li:nth-child(10) {
-    left: 59%;
-    width: 190px;
-    height: 190px;
-    bottom: -190px;
-    animation-delay: 33s;
-}
-.background li:nth-child(11) {
-    left: 59%;
-    width: 259px;
-    height: 259px;
-    bottom: -259px;
-    animation-delay: 18s;
-}
-.background li:nth-child(12) {
-    left: 19%;
-    width: 101px;
-    height: 101px;
-    bottom: -101px;
-    animation-delay: 56s;
-}
-.background li:nth-child(13) {
-    left: 49%;
-    width: 204px;
-    height: 204px;
-    bottom: -204px;
-    animation-delay: 26s;
-}
-.background li:nth-child(14) {
-    left: 56%;
-    width: 204px;
-    height: 204px;
-    bottom: -204px;
-    animation-delay: 23s;
-}
-.background li:nth-child(15) {
-    left: 33%;
-    width: 252px;
-    height: 252px;
-    bottom: -252px;
-    animation-delay: 29s;
-}
-.background li:nth-child(16) {
-    left: 42%;
-    width: 216px;
-    height: 216px;
-    bottom: -216px;
-    animation-delay: 51s;
-}
-.background li:nth-child(17) {
-    left: 47%;
-    width: 211px;
-    height: 211px;
-    bottom: -211px;
-    animation-delay: 43s;
-}
-.background li:nth-child(18) {
-    left: 2%;
-    width: 238px;
-    height: 238px;
-    bottom: -238px;
-    animation-delay: 21s;
-}
-.background li:nth-child(19) {
-    left: 39%;
-    width: 165px;
-    height: 165px;
-    bottom: -165px;
-    animation-delay: 48s;
-}
-.background li:nth-child(20) {
-    left: 68%;
-    width: 245px;
-    height: 245px;
-    bottom: -245px;
-    animation-delay: 58s;
-}
-.background li:nth-child(21) {
-    left: 82%;
-    width: 246px;
-    height: 246px;
-    bottom: -246px;
-    animation-delay: 19s;
-}
-.background li:nth-child(22) {
-    left: 28%;
-    width: 262px;
-    height: 262px;
-    bottom: -262px;
-    animation-delay: 35s;
-}
-.background li:nth-child(23) {
-    left: 37%;
-    width: 217px;
-    height: 217px;
-    bottom: -217px;
-    animation-delay: 64s;
 }
 
-.background li:nth-child(24) {
-    left: 21%;
-    width: 269px;
-    height: 269px;
-    bottom: -269px;
-    animation-delay: 29s;
-}
-.background li:nth-child(25) {
-    left: 0%;
-    width: 266px;
-    height: 266px;
-    bottom: -266px;
-    animation-delay: 92s;
-}
-.background li:nth-child(26) {
-    left: 57%;
-    width: 233px;
-    height: 233px;
-    bottom: -233px;
-    animation-delay: 9s;
-}
-.background li:nth-child(27) {
-    left: 58%;
-    width: 202px;
-    height: 202px;
-    bottom: -202px;
-    animation-delay: 106s;
-}
-.background li:nth-child(28) {
-    left: 29%;
-    width: 139px;
-    height: 139px;
-    bottom: -139px;
-    animation-delay: 105s;
-}
-.background li:nth-child(29) {
-    left: 77%;
-    width: 172px;
-    height: 172px;
-    bottom: -172px;
-    animation-delay: 22s;
-}
-.background li:nth-child(30) {
-    left: 60%;
-    width: 173px;
-    height: 173px;
-    bottom: -173px;
-    animation-delay: 149s;
-}
-.background li:nth-child(31) {
-    left: 79%;
-    width: 251px;
-    height: 251px;
-    bottom: -251px;
-    animation-delay: 138s;
-}
-.background li:nth-child(32) {
-    left: 82%;
-    width: 189px;
-    height: 189px;
-    bottom: -189px;
-    animation-delay: 11s;
-}
-.background li:nth-child(33) {
-    left: 60%;
-    width: 153px;
-    height: 153px;
-    bottom: -153px;
-    animation-delay: 87s;
-}
-.background li:nth-child(34) {
-    left: 71%;
-    width: 125px;
-    height: 125px;
-    bottom: -125px;
-    animation-delay: 132s;
-}
-.background li:nth-child(35) {
-    left: 63%;
-    width: 150px;
-    height: 150px;
-    bottom: -150px;
-    animation-delay: 68s;
-}
-.background li:nth-child(36) {
-    left: 46%;
-    width: 253px;
-    height: 253px;
-    bottom: -253px;
-    animation-delay: 11s;
-}
-.background li:nth-child(37) {
-    left: 42%;
-    width: 149px;
-    height: 149px;
-    bottom: -149px;
-    animation-delay: 141s;
-}
-.background li:nth-child(38) {
-    left: 73%;
-    width: 208px;
-    height: 208px;
-    bottom: -208px;
-    animation-delay: 129s;
-}
-.background li:nth-child(39) {
-    left: 74%;
-    width: 185px;
-    height: 185px;
-    bottom: -185px;
-    animation-delay: 138s;
-}
-.background li:nth-child(40) {
-    left: 5%;
-    width: 218px;
-    height: 218px;
-    bottom: -218px;
-    animation-delay: 151s;
-}
-.background li:nth-child(41) {
-    left: 23%;
-    width: 181px;
-    height: 181px;
-    bottom: -181px;
-    animation-delay: 26s;
-}
-.background li:nth-child(42) {
-    left: 43%;
-    width: 235px;
-    height: 235px;
-    bottom: -235px;
-    animation-delay: 201s;
-}
-.background li:nth-child(43) {
-    left: 3%;
-    width: 210px;
-    height: 210px;
-    bottom: -210px;
-    animation-delay: 127s;
-}
-.background li:nth-child(44) {
-    left: 69%;
-    width: 137px;
-    height: 137px;
-    bottom: -137px;
-    animation-delay: 20s;
-}
-.background li:nth-child(45) {
-    left: 80%;
-    width: 133px;
-    height: 133px;
-    bottom: -133px;
-    animation-delay: 147s;
-}
-.background li:nth-child(46) {
-    left: 81%;
-    width: 143px;
-    height: 143px;
-    bottom: -143px;
-    animation-delay: 217s;
-}
-.background li:nth-child(47) {
-    left: 31%;
-    width: 192px;
-    height: 192px;
-    bottom: -192px;
-    animation-delay: 100s;
-}
-.background li:nth-child(48) {
-    left: 56%;
-    width: 117px;
-    height: 117px;
-    bottom: -117px;
-    animation-delay: 155s;
-}
-.background li:nth-child(49) {
-    left: 32%;
-    width: 127px;
-    height: 127px;
-    bottom: -127px;
-    animation-delay: 85s;
-} */
-/* width */
-::-webkit-scrollbar {
-  width: 15px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: #240b3650;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: linear-gradient(to top, #f0f, #0ff);
-  border-radius:10px ;      
-  background: linear-gradient(
-        15deg,
-        #880088,
-        #8320aa,
-        rgb(111, 0, 255),
-        #0ff,
-        #0ff,
-        rgb(111, 0, 255),
-        #8320aa,
-        #880088
-      )
-      no-repeat;
-    background-size: 500%;
-    background-position: left center;
-    transition: background 0.3s ease;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  /* background: #555; */
-  cursor: pointer;
-  background-size: 1000%;
-    background-position: right center;
-}
 body {
         background: #c31432;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #240b36, #c31432);  /* Chrome 10-25, Safari 5.1-6 */
@@ -460,22 +43,37 @@ body {
     background: rgb(2, 2, 31);
     }
     .coin {
-  font-size: 100px;
+  /* font-size: 100px; */
   width: 0.1em;
   height: 0.25em;
-  background: linear-gradient(to right, #240b36, #c31432);
-  margin: auto;
-  margin-left: 0.1em;
+  /* background: linear-gradient(to right, #240b36, #c31432); */
+  margin-top: 2em;
+  margin-left: 0em;
+  padding-left: 0;
   /* position: absolute; */
   /* top: 0; */
   /* left: 0; */
   /* right: 0; */
   /* bottom: 0; */
-  animation: rotate_4001510 7s infinite linear;
-  transform-style: preserve-3d;
+  /* animation: rotate_4001510 7s infinite linear; */
+  /* transform-style: preserve-3d; */
+  display: flex;
+    align-items: center;
+    /* padding: 15px 20px; */
+    /* border: 2px solid transparent; Use transparent border to make space for the gradient */
+    /* border-radius: 25px; Set border radius */
+    /* position: relative; Position relative to place pseudo-element correctly */
+    /* background-clip: padding-box; Clip the background to the padding box */
+    /* font-size: 16px; */
+    font-weight: bold;
+    cursor: pointer;
+    /* transition: background-color 0.3s, box-shadow 0.3s; */
+    /* background-color: #02021E;  */
+    /* color: #fff; */
 }
 
-.coin .side, .coin:before, .coin:after {
+
+/* .coin .side, .coin:before, .coin:after {
   content: "";
   position: absolute;
   width: 1em;
@@ -491,26 +89,16 @@ body {
   backface-visibility: hidden;
 }
 
-.coin .tails, .coin:after {
-  left: -0.4em;
-  transform: rotateY(90deg);
-}
-
-.coin:before, .coin:after {
-  background: linear-gradient(to right, #240b36, #c31432);
-  backface-visibility: hidden;
-  transform: rotateY(90deg);
-}
 
 .coin:after {
   transform: rotateY(-90deg);
-}
+} */
 
-@keyframes rotate_4001510 {
+/* @keyframes rotate_4001510 {
   100% {
     transform: rotateY(360deg);
-  }
-}
+  } */
+/* } */
 
 .svg_back {
   transform: scaleX(-1);
@@ -535,7 +123,7 @@ body {
     .nav {
         width: 95%;
         height: 20%;
-        margin: 1.5em;
+        margin-block: 1.5em;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -605,6 +193,8 @@ body {
         justify-content: center;
         flex-direction: column;
         height: 92vh;
+        /* border: #00DDEB solid 1px; */
+        margin-top: 1em;
 
     }
     .hero h1{
@@ -708,7 +298,7 @@ body {
         margin-top: 3em;
         /* border: green 2px solid; */
         width: 100%;
-        height: 50vh;
+        /* height: 50vh; */
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -1252,8 +842,8 @@ margin-top: 0;
   margin-inline: 1.5em;
   /* padding: 1.5rem 1rem 1rem 1rem; */
   /* margin-top: 1rem; */
-  background-color: #fff;
-  background: rgb(2, 2, 31);
+  /* background-color: #fff; */
+  
   
   max-width: 300px;
 }
@@ -1291,6 +881,7 @@ margin-top: 0;
   width: 100%;
   height: 100%;
   padding:0rem;
+  background: rgb(2, 2, 31);
   background-color: rgba(255, 255, 255, 0.074);
   /* border: 1px solid rgba(255, 255, 255, 0.222); */
   -webkit-backdrop-filter: blur(20px);
@@ -1543,7 +1134,7 @@ margin-top: 0;
 
 .c{
     display: flex;
-    flex-direction: row;
+    /* flex-direction: row; */
     align-items: center;
     justify-content: center;
     gap: 20px;
@@ -1750,6 +1341,7 @@ input:checked + .slider:before {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        text-align: center;
     }
     .info-container{
         width: 90%;
@@ -1825,9 +1417,13 @@ input:checked + .slider:before {
 
 .subtitle {
     text-align: center;
+    /* margin: 0; */
+    /* padding: auto; */
     font-size: 1.2em;
     margin-bottom: 30px;
     color: #ddd;
+    /* border: #00DDEB 2px solid; */
+    /* width: 100%; */
 }
 
 .contact-form label, .faq-question {
@@ -2029,7 +1625,7 @@ button:hover svg {
 }
 .faq .row{
     margin-block: 2em;
-width: 50%;
+/* width: 100%; */
 display: flex;
 align-items: center;
 justify-content: center;
@@ -2039,7 +1635,7 @@ flex-direction: column;
 }
 .row-cube{
     width: 50%;
-    display: flex;
+    /* display: flex; */
     align-items: center;
     justify-content: center;
 }
@@ -2183,6 +1779,40 @@ flex-direction: column;
         margin: 10px 0;
     }
     }
+
+    @media (max-width: 600px) {
+/* .navIMG{
+  height: 70px;
+  width: 70px;
+} */
+
+.container-contact {
+  width: 100%;
+}
+.container-contact .subtitle{
+  width: 100%;
+}
+.row-cube{
+    display: none;
+}
+.faq .row{
+width: 100%;
+margin-inline-end: 1em;
+}
+.faq .title{
+    margin-left: 0em;
+}
+.hide{
+  display: none;
+  /* border: #00DDEB 1px solid; */
+}
+.c{
+  flex-direction: column;
+  /* border: #00DDEB 1px solid; */
+}
+  }
+
+
 </style>
 <script>
     const businessPlans = [
@@ -2288,74 +1918,17 @@ async function addCustomer() {
         }
 
 </script>
-    <!-- <ul class="background">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-     </ul> -->
+    
 <body>
 
     <div class="nav">
         <div class="logo" >
-            <div class="coin" style="display: none;">
-                <div class="side heads">
+          <!-- <img class="navIMG" src="{{ url_for('static', filename='luca2.png') }}" alt="Customize Computer Icon" >   -->
+          <!-- <img src="{{ url_for('static', filename='luca2.png') }}" alt="Customize Computer Icon" style="width: 150px; height: 150px;"> -->
+            <div class="coin">
+           
+              <!-- <img src="{{ url_for('static', filename='luca.png') }}" alt="Customize Computer Icon" style="width: 32px; height: 32px;"> -->
+                <!-- <div class="side heads">
                   <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="100%" height="100%" version="1.1" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 4091.27 4091.73" xmlns:xlink="http://www.w3.org/1999/xlink">
                <g id="Layer_x0020_1">
                 <metadata id="CorelCorpID_0Corel-Layer"></metadata>
@@ -2375,7 +1948,7 @@ async function addCustomer() {
                  <path fill="white" fill-rule="nonzero" d="M2947.77 1754.38c40.72,-272.26 -166.56,-418.61 -450,-516.24l91.95 -368.8 -224.5 -55.94 -89.51 359.09c-59.02,-14.72 -119.63,-28.59 -179.87,-42.34l90.16 -361.46 -224.36 -55.94 -92 368.68c-48.84,-11.12 -96.81,-22.11 -143.35,-33.69l0.26 -1.16 -309.59 -77.31 -59.72 239.78c0,0 166.56,38.18 163.05,40.53 90.91,22.69 107.35,82.87 104.62,130.57l-104.74 420.15c6.26,1.59 14.38,3.89 23.34,7.49 -7.49,-1.86 -15.46,-3.89 -23.73,-5.87l-146.81 588.57c-11.11,27.62 -39.31,69.07 -102.87,53.33 2.25,3.26 -163.17,-40.72 -163.17,-40.72l-111.46 256.98 292.15 72.83c54.35,13.63 107.61,27.89 160.06,41.3l-92.9 373.03 224.24 55.94 92 -369.07c61.26,16.63 120.71,31.97 178.91,46.43l-91.69 367.33 224.51 55.94 92.89 -372.33c382.82,72.45 670.67,43.24 791.83,-303.02 97.63,-278.78 -4.86,-439.58 -206.26,-544.44 146.69,-33.83 257.18,-130.31 286.64,-329.61l-0.07 -0.05zm-512.93 719.26c-69.38,278.78 -538.76,128.08 -690.94,90.29l123.28 -494.2c152.17,37.99 640.17,113.17 567.67,403.91zm69.43 -723.3c-63.29,253.58 -453.96,124.75 -580.69,93.16l111.77 -448.21c126.73,31.59 534.85,90.55 468.94,355.05l-0.02 0z"></path>
                 </g>
                </g>
-              </svg></div>
+              </svg></div> -->
               </div>
         </div>
         <button class="google-signin-btn" onclick="window.location.href='/connect'"  >
@@ -2395,7 +1968,7 @@ async function addCustomer() {
                   <polyline points="8 1 12 5 8 9"></polyline>
                 </svg>
               </button>
-
+<div class="hide">
               <div class="container-glass">
                 <div data-text="Design" style="--r:-15;" class="glass">
                   <i class="fi fi-sr-customize-computer" style="color: white;"></i>
@@ -2415,7 +1988,7 @@ async function addCustomer() {
                   </svg>
                 </div>
               </div>
-
+            </div>
 
             
 
@@ -2483,7 +2056,7 @@ async function addCustomer() {
 
 
 
-
+<div class="hide">
         <div class="icon-3">
             <!-- <div> -->
             <div class="parent">
@@ -2588,7 +2161,7 @@ async function addCustomer() {
                 </p>
               </div> -->
         </div> 
-
+      </div>
           <!-- <div class="feature-cards">
 
                 <div class="cardsx">
@@ -2855,7 +2428,7 @@ async function addCustomer() {
                     <label for="textarea">How Can We Help You?</label>
                     <textarea required="" cols="50" rows="10" id="textarea" name="textarea">          </textarea>
                   </div>
-                  <button class="button1">
+                  <button class="button1 ">
                     <svg
                       height="24"
                       width="24"
@@ -2891,6 +2464,7 @@ async function addCustomer() {
             </div>
             <!-- Add more FAQ items as needed -->
         </div>
+        <!-- <div class="hide"> -->
 <div class="row-cube">
         <div class="container-cube">
             <div class="cube">
@@ -2943,10 +2517,11 @@ async function addCustomer() {
                 <span style="--i:2;"></span>
                 <span style="--i:1;"></span>
               </div>
-            </div>
+            <!-- </div> -->
           </div>
             
         </div>
+      </div>
         </div>
        
 
