--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
     <style>
         body {
             background-color: #ffffff;
-            background: rgb(5, 1, 24);
+            /* background: rgb(5, 1, 24); */
             background: linear-gradient(to bottom right, #011831, #1e021d);
             display: flex;
             align-items: center;
@@ -15,8 +15,10 @@
             height: 100vh;
             margin: 0;
             font-family: "Open Sans", sans-serif;
+            overflow: hidden;
         }
         .container {
+            margin: 1em;
             display: flex;
             width: 90vw;
             height: 90vh;
@@ -28,7 +30,8 @@
         }
         .form-container {
             width: 50%;
-            padding: 2em;
+            /* padding: 2em; */
+
         }
         .right-container {
             width: 50%;
@@ -51,6 +54,7 @@
             flex-direction: column;
             margin-top: 5em;
             margin-left: 5em;
+
         }
         .active {
             display: flex;
@@ -62,6 +66,7 @@
             font-weight: 500;
         }
         input {
+           
             margin: 0.5em 0;
             padding: 1em;
             margin-right: 10em;
@@ -74,7 +79,7 @@
             border-color: #007bff;
         }
         button {
-            padding: 1em;
+            padding: 1em ;
             font-size: 1em;
             /* background-color: #000; */
             background-color: rgb(5, 1, 24);
@@ -83,8 +88,9 @@
             border-radius: 10px;
             cursor: pointer;
             margin: 0.5em 0;
-            margin-right: 10em;
+            /* margin-right: 10em; */
             transition: background-color 0.3s;
+            /* width: 90%; */
         }
         button:hover {
             background-color: #007bff;
@@ -155,6 +161,30 @@
   font-weight:700;
   /* margin-bottom: 1px; */
 
+}
+
+@media (max-width: 768px) {
+    body{
+        background-color: #ffffff;
+        background: white;
+    }
+    input{
+        width: 80%;
+    }
+    button{
+        width: 90%;
+    } 
+    .container {
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0);
+            flex-direction: column;
+        }
+        .form-container {
+            width: 100%;
+            /* padding-inline: 2em; */
+        }
+        .right-container {
+            display: none;
+        }
 }
     </style>
 </head>
