--- a/templates/index.html
+++ b/templates/index.html
@@ -2098,7 +2098,7 @@ async function addCustomer() {
                     <div class="content-box">
                         <span class="card-title">Email Personalization</span>
                         <p class="card-content">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                            Adapt your emails to suit the unique needs of prospect
                         </p>
                         <span class="see-more">Learn More</span>
                     </div>
@@ -2260,7 +2260,7 @@ async function addCustomer() {
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                         </svg>
-                        <span>20 Free Emails P/M</span>
+                        <span>20 Free Emails</span>
                       </div>
                       <div class="list">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -2275,7 +2275,7 @@ async function addCustomer() {
           
                         <span>Automatic Email Sending</span>
                       </div>
-                      <div class="list">
+                      <!-- <div class="list">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                         </svg>
@@ -2288,7 +2288,7 @@ async function addCustomer() {
                         </svg>
           
                         <span>Csv uploads supported</span>
-                      </div>
+                      </div> -->
                       
                   </div>
                   <div class="bottom">
@@ -2319,7 +2319,7 @@ async function addCustomer() {
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                         </svg>
-                        <span>10.000 Emails P/M</span>
+                        <span>10.000/mo Emails</span>
                       </div>
                       <div class="list">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -2332,21 +2332,14 @@ async function addCustomer() {
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                         </svg>
           
-                        <span>Live Support</span>
-                      </div>
-                      <div class="list">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
-                        </svg>
-          
-                        <span>Email support</span>
-                      </div>
-                      <div class="list">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
-                        </svg>
-          
                         <span>Email Tracking</span>
+                      </div>
+                      <div class="list">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                        </svg>
+          
+                        <span>Support Line</span>
                       </div>
                       
                   </div>
@@ -2372,13 +2365,13 @@ async function addCustomer() {
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                         </svg>
-                        <span>Unlimited Monthly Emails</span>
+                        <span>50,000 +/mo emails</span>
                       </div>
                       <div class="list">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                         </svg>
-                        <span>Latest AI Model</span>
+                        <span>Most Advanced AI Model</span>
                       </div>
                       <div class="list">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -2392,14 +2385,7 @@ async function addCustomer() {
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                         </svg>
           
-                        <span>24/7 Support</span>
-                      </div>
-                      <div class="list">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
-                        </svg>
-          
-                        <span>Personalised Prompts</span>
+                        <span>Customized System</span>
                       </div>
                       
                   </div>
