--- a/templates/login.html
+++ b/templates/login.html
@@ -90,7 +90,7 @@
             margin: 0.5em 0;
             /* margin-right: 10em; */
             transition: background-color 0.3s;
-            /* width: 90%; */
+            width:70%;
         }
         button:hover {
             background-color: #007bff;
