--- a/templates/db.html
+++ b/templates/db.html
@@ -913,7 +913,7 @@ function showNotification(message) {
         <div class="div">
         <div class="logo">
             <!-- <img src="Volt.png" alt="Logo"> -->
-            <img  src="{{ url_for('static', filename='Volt.png') }}" alt="Logo">
+            <img  src="{{ url_for('static', filename='vm.png') }}" alt="Logo">
             <div>Voltmailer</div>
         </div>
         <div class="menu">
