padding for image

--- a/templates/login.html
+++ b/templates/login.html
@@ -33,6 +33,9 @@
             /* padding: 2em; */
 
         }
+        .form-container img{
+            padding: 10px;
+        }
         .right-container {
             width: 50%;
             background-color: #02021E;
