--- a/templates/db.html
+++ b/templates/db.html
@@ -913,8 +913,8 @@ function showNotification(message) {
         <div class="div">
         <div class="logo">
             <!-- <img src="Volt.png" alt="Logo"> -->
-            <img  src="{{ url_for('static', filename='vm.png') }}" alt="Logo">
-            <div>Voltmailer</div>
+            <img  src='../static/vmb.png' alt="google" style="width: 150px; height: 90px;">
+            <!-- <div>Voltmailer</div> -->
         </div>
         <div class="menu">
             <!-- <div class="menu-item">Menu</div> -->
@@ -946,7 +946,7 @@ function showNotification(message) {
         <div class="top">
             <div class="plan">Free plan Subscriber</div>
             <div class="google">
-                <img  src="{{ url_for('static', filename='google.png') }}" alt="google">
+                <img  src='../static/google.png' alt="google">
                 {{ email }}
             </div>
         </div>
