--- a/templates/login.html
+++ b/templates/login.html
@@ -195,7 +195,7 @@
     <div class="container">
         <div class="form-container">
             <!-- <div class="nav">VoltMail</div> -->
-            <img  src="{{ url_for('static', filename='vm.png') }}" alt="google">
+            <img  src='../static/vmb.png' alt="google" style="width: 200px; height: 120px;">
             <div id="loginForm" class="login-form active">
                 <h1>Login</h1>
                 <h4>Enter your email and password</h4>
