--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,7 @@ body {
     color: white;
     background: rgb(2, 2, 31);
     }
+    
     .coin {
   /* font-size: 100px; */
   width: 0.1em;
@@ -121,7 +122,7 @@ body {
 
 
     .nav {
-        width: 95%;
+        width: 98%;
         height: 20%;
         margin-block: 1.5em;
         display: flex;
@@ -1960,7 +1961,7 @@ async function addCustomer() {
           <!-- <img class="navIMG" src="{{ url_for('static', filename='luca2.png') }}" alt="Customize Computer Icon" >   -->
           <!-- <img src="{{ url_for('static', filename='luca2.png') }}" alt="Customize Computer Icon" style="width: 150px; height: 150px;"> -->
             <div class="coin">
-              <img  src="{{ url_for('static', filename='vm.png') }}" alt="google">
+              <img  src='../static/vm.png' alt="google" style="width: 200px; height: 120px;">
               <!-- <img src="{{ url_for('static', filename='luca.png') }}" alt="Customize Computer Icon" style="width: 32px; height: 32px;"> -->
                 <!-- <div class="side heads">
                   <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="100%" height="100%" version="1.1" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 4091.27 4091.73" xmlns:xlink="http://www.w3.org/1999/xlink">
