--- a/templates/index.html
+++ b/templates/index.html
@@ -2295,7 +2295,7 @@ async function addCustomer() {
                   <div class="bottom">
         
                     <a class="btn" href="#">
-                    <div class="btn-shine" onclick="window.location.href='/connect'">Get early access</div>
+                    <div class="btn-shine" onclick="window.location.href='/connect'">Start Now</div>
                     </a>
 
                   </div>
@@ -2346,7 +2346,7 @@ async function addCustomer() {
                   </div>
                   <div class="bottom-l">
         
-                    <a class="btn-l" href="#" onclick="window.location.href='/connect'">Continue with Team</a>
+                    <a class="btn-l" href="#" onclick="window.location.href='/connect'">Start Now</a>
                   </div>
                 </div>
                 </div>
