--- a/templates/login.html
+++ b/templates/login.html
@@ -269,6 +269,7 @@
         });
 
         function login() {
+            console.log("loggin in")
             var email = document.getElementById('loginEmail').value;
             var password = document.getElementById('loginPassword').value;
             var loginError = document.getElementById('loginError');
@@ -306,6 +307,7 @@
         }
 
         function signUp() {
+            console.log("signingn in")
             // var fullName = document.getElementById('signupFullName').value;
             var email = document.getElementById('signupEmail').value;
             var password = document.getElementById('signupPassword').value;
